   QSharedPointer for an object already managed by a shared pointer.
 - Added qHashBits() to aid implementing qHash() overloads for custom
   types.
 - Added new QByteArrayList class.
 - Added QStorageInfo class to retrive information about mounted volumes
   and drives

 - Logging:
   * QT_MESSAGE_PATTERN can include a backtrace using %{backtrace}
   * Added QtMsgType argument to QLoggingCategory constructor and
     Q_LOGGING_CATEGORY macro that controls the default category
     configuration.
   * File, line, function information are not recorded anymore for logging
     statements in release builds. Set QT_MESSAGELOGCONTEXT explicitly to
     enable recording in all configurations.

 - QAbstractProxyModel:
   * [QTBUG-39549] QAbstractProxyModel now forwards the drop-related API.

 - QByteArray:
   * Added convenience methods to convert directly to and from std::string.
   * Fixed a bug that would cause QByteArray to stop converting toUpper or
     toLower at the first embedded null character.

 - QCommandLineParser:
   * Added addOptions() method.

 - QElapsedTimer:
   * Is no longer a POD; its default constructor now initializes the object to
     an invalid QElapsedTimer

 - QFlags:
   * [QTBUG-39786] Added initializer_list constructor

 - QFuture:
   * [QTBUG-17220] Can now be used with any QThreadPool, not just
     globalInstance().

 - QPair:
   * Can now be used in C++11 constexpr contexts.

 - QSaveFile:
   * Now follows symbolic links when writing to a link instead of
     replacing the link with the contents.

 - QSettings:
   * [QTBUG-21739] Fixed data loss while writing the config to the disk
     fails.

 - QStandardPaths:
   * [QTBUG-38483] QStandardPaths now has new enumeration values
     AppDataLocation, AppLocalDataLocation to be able to differentiate
     between roaming and local paths on the Windows operating system.
     DataLocation is deprecated in favor of AppDataLocation.

 - QString: